src-ken&y/objects/Segment_Validation__c.object
<CustomObject>
    <customHelpPage>HelpSegmentValidation</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compare_10__c</fullName>
        <formula>NOT(ISNULL(Segment_10__c)) &amp;&amp; NOT(ISBLANK(Segment_10__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compare_1__c</fullName>
        <formula>NOT(ISNULL(Segment_1__c)) &amp;&amp; NOT(ISBLANK(Segment_1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compare_2__c</fullName>
        <formula>NOT(ISNULL(Segment_2__c)) &amp;&amp; NOT(ISBLANK(Segment_2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment_10__c</fullName>
        <label>Segment 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_1__c</fullName>
        <label>Segment 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_2__c</fullName>
        <label>Segment 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_10__c</fullName>
        <formula>IF( CONTAINS(Segment_10__c, &quot;*&quot;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_1__c</fullName>
        <formula>IF( CONTAINS(Segment_1__c, &quot;*&quot;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_2__c</fullName>
        <formula>IF( CONTAINS(Segment_2__c, &quot;*&quot;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Segment Validation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Segment_1__c</columns>
        <columns>Segment_2__c</columns>
        <columns>Segment_3__c</columns>
        <columns>Segment_4__c</columns>
        <columns>Segment_5__c</columns>
        <columns>Segment_6__c</columns>
        <columns>Segment_7__c</columns>
        <columns>Segment_8__c</columns>
        <columns>Segment_9__c</columns>
        <columns>Segment_10__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SV-{0000000000}</displayFormat>
        <label>Segment Validation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>